fixed layout issues for mobile

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -146,8 +146,8 @@ body, p{
 }
 
 .small_logo{
-	top:20px;
-	left:40px;
+	top:0px;
+	left:20px;
 	width:52px;
 	height:52px;
 }
@@ -271,4 +271,21 @@ html,body{
 }
 #yield_container{
 	padding-bottom:50px;
+}
+
+#banner_large{
+	margin-top:50px;
+}
+#banner_small{
+	margin-top:30px;
+}
+
+.web_screenshot{
+	width:100%;
+}
+.mobile_screenshot_large{
+	width:70%;
+}
+.mobile_screenshot_small{
+	width:40%;
 }
